# mmid_solver

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  compare.sh
mmid_CBLAS/: CMakeLists.txt
mmid_CBLAS/src/: gnuplot.c  gnuplot.h  main.c
mmid_OpenCL/: CMakeLists.txt
mmid_OpenCL/src/: CL_ERRORS.h  embed_kernels.c  main.cpp
mmid_OpenCL/src/cl_kernels/: commons.c  commons.h  kernels.h  mmid_kernel.cl  opencl_commons.c  opencl_commons.h
mmid_OpenMP/: CMakeLists.txt
mmid_OpenMP/src/: main.c
